# Data-Analysis-SpaceX

./: README.md  pyproject.toml
notebooks/: first_stage_visualization.ipynb  web_scrapping.ipynb  wrangling.ipynb
notebooks/data/: spacex_web_scraped.csv
