[tool.poetry]
name = "spacex-analysis"
version = "0.1.0"
description = "Data analysis with SpaceX"
authors = ["Alirio Mieres <mie21001@byui.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
jupyterlab = "^4.2.5"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
